Fix overflow caused by long anchor tag texts.

--- a/css/reset.css
+++ b/css/reset.css
@@ -21,6 +21,6 @@ input, button, textarea, select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, a {
   overflow-wrap: break-word;
 }
